fix: z-index on bgmobile2

--- a/src/sections/HeroSection/HeroSection.module.scss
+++ b/src/sections/HeroSection/HeroSection.module.scss
@@ -43,7 +43,7 @@
     @media screen and (max-width: 960px) {
         display: block;
         position: absolute;
-        z-index: 1;
+        z-index: -1;
         top: -100px;
         left: -240px;
         opacity: 0.3;
